[bdist_wheel]
universal = 1

[metadata]
name = ray_abcd_matrix
version = attr: ray_abcd_matrix.VERSION
author = Eitan Davis
author_email = 25664700+eitan-davis@users.noreply.github.com
description = This is a code to get the ray abcd matrices.
long_description = file: README.md, CHANGELOG.rst, LICENSE
keywords = ray, ray matrix, ABCD matrix, ABCD
license = GPL 3
classifiers =
    Programming Language :: Python :: 3

[options.packages.find]
where=.